fdo#60565 - re-read font data on GtkSettings fontconfig-timestamp notify.

Change-Id: If1c4d3a7754cc35208e40494828a799f94f26afc